@@ -1,21 +1,21 @@
 /* 
-  DccNiTghtmare: a satirical post-apocalyptical RPG.
+  DNT: a satirical post-apocalyptical RPG.
   Copyright (C) 2005-2012 DNTeam <dnt@dnteam.org>
  
-  This file is part of DccNiTghtmare.
+  This file is part of DNT.
  
-  DccNiTghtmare is free software: you can redistribute it and/or modify
+  DNT is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
 
-  DccNiTghtmare is distributed in the hope that it will be useful,
+  DNT is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
-  along with DccNiTghtmare.  If not, see <http://www.gnu.org/licenses/>.
+  along with DNT.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 #include "editor.h"
@@ -57,7 +57,7 @@ editor::editor()
          "Maximize", "Close", "Confirm", "Cancel");
 
    /* Initialize SDL/Farso/etc */
-   Farso::init(&screen,"DccNiTghtmare's Particle Editor", 800, 600,false, 0, 8);
+   Farso::init(&screen,"DNT's Particle Editor", 800, 600,false, 0, 8);
 
    /* Get OpenGL Extensions */
    ext.defineAllExtensions();
@@ -240,7 +240,7 @@ void editor::treatGuiEvents()
    if(eventInfo == Farso::EVENT_NONE)
    {
       /* No Event, so must treat Camera Input */
-      gameCamera->doIO(keys, mButton, mouseX, mouseY, DELTA_CAMERA);
+      gameCamera->doIO(keys, mButton, mouseX, mouseY, mouseWheel, DELTA_CAMERA);
    }
    else
    {
@@ -380,6 +380,29 @@ void editor::run()
          SDL_PumpEvents();
          mButton = SDL_GetMouseState(&mouseX,&mouseY);
          keys = SDL_GetKeyState(NULL);
+
+         /* Let's check some events */
+         SDL_Event event;
+         mouseWheel = 0;
+         while(SDL_PollEvent(&event))
+         {
+            if(event.type == SDL_QUIT)
+            {
+            }
+            else if(event.type == SDL_MOUSEBUTTONDOWN)
+            {
+               if(event.button.button == SDL_BUTTON_WHEELUP)
+               {
+                  mouseWheel++;
+               }
+               else if(event.button.button == SDL_BUTTON_WHEELDOWN)
+               {
+                  mouseWheel--;
+               }
+            }
+         }
+
+
 
          /* Treat GUI Events */
          treatGuiEvents();
