@@ -1,21 +1,21 @@
 /* 
-  DccNiTghtmare: a satirical post-apocalyptical RPG.
+  DNT: a satirical post-apocalyptical RPG.
   Copyright (C) 2005-2012 DNTeam <dnt@dnteam.org>
  
-  This file is part of DccNiTghtmare.
+  This file is part of DNT.
  
-  DccNiTghtmare is free software: you can redistribute it and/or modify
+  DNT is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
 
-  DccNiTghtmare is distributed in the hope that it will be useful,
+  DNT is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
-  along with DccNiTghtmare.  If not, see <http://www.gnu.org/licenses/>.
+  along with DNT.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 #include "camera.h"
@@ -58,7 +58,8 @@ camera::~camera()
 /******************************************************************
  *                             doIO                               *
  ******************************************************************/
-bool camera::doIO(Uint8 *keys, Uint8 mBotao, int x, int y, GLfloat varCamera)
+bool camera::doIO(Uint8 *keys, Uint8 mBotao, int x, int y, 
+      int mouseWheel, GLfloat varCamera)
 {
    options opt;
 
@@ -135,6 +136,14 @@ bool camera::doIO(Uint8 *keys, Uint8 mBotao, int x, int y, GLfloat varCamera)
    else
    {
       middleMouse = false;
+   }
+
+   /* Mouse Wheel move, controlling zoo, controlling zoom */
+   if(mouseWheel != 0)
+   {
+      /* Inverted! */
+      zoomAc -= (mouseWheel*4);
+      return(true);
    }
 
    /* Apply the Zoom accelerations */
@@ -214,10 +223,12 @@ bool camera::doIO(Uint8 *keys, Uint8 mBotao, int x, int y, GLfloat varCamera)
    if(d > minZoom)
    {
       d = minZoom;
+      zoomAc = 0;
    }
    else if(d < ZOOM_MAX)
    {
       d = ZOOM_MAX;
+      zoomAc = 0;
    }
 
    /* Put Phi on [0-360) range */
