@@ -13,6 +13,7 @@
  - Decreased the A* delay for Playable Character pathfinding;
  - Added a brief text alert when Playable Character A* fails 
    to find a path;
+ - Zoom can be done also by mouse wheel;
 
 BugFixes:
  - heightmap2dnt: Fixed a missing include;
